[#3615011]Fix Folder View context menu positioning.
The problem was caused by migration from gtk_widget_get_pointer() (which had
complicated coords returned) to gdk_window_get_device_position().

Big thanks to David Schalig <github@schalig.org> for pointing on that.

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,5 +25,7 @@ Abel Fírvida Donéstevez <aafirvida@gmail.com>
 pavel <korzhpavel@users.sourceforge.net>
 Richard Grenville <richardgv@users.sourceforge.net>
 Mamoru TASAKA <mtasaka@fedoraproject.org>
+Jekyll Wu <adaptee@gmail.com>
+David Schalig <github@schalig.org>
 
 Also big thanks to our great translation team.
