Commit from LXDE Pootle server by user Dar_Kuntu.: 314 of 379 strings translated (22 fuzzy).

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-29 12:11+0000\n"
+"PO-Revision-Date: 2013-10-10 20:41+0000\n"
 "Last-Translator: Dar_Kuntu <ZAck13@gmx.at>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1380456690.0\n"
+"X-POOTLE-MTIME: 1381437704.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -135,15 +135,13 @@ msgstr "Wählen Sie ein Symbol aus …"
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:4
-#, fuzzy
 msgid "image files"
 msgstr "Bilddateien"
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:6
-#, fuzzy
 msgid "system icon theme"
-msgstr "System-Symbolthema"
+msgstr "System-Symboldesign"
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -628,7 +626,7 @@ msgstr ""
 #: ../src/extra/fm-xml-file.c:380
 #, c-format
 msgid "Entity name '%-.*s' is not known"
-msgstr ""
+msgstr "Objektname '%-.*s' unbekannt"
 
 #: ../src/extra/fm-xml-file.c:384
 #, c-format
